--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "+model=binctabl",
+                "+model=mlplob",
                 "hydra.job.chdir=False",
                 "hydra.run.dir=.",
             ]
