refactor requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-einops==0.8.0
-hydra-core==1.3.2
-lightning==2.1.0
-lion_pytorch==0.2.2
-matplotlib==3.8.4
-numpy==1.24.4
-omegaconf==2.3.0
-pandas==2.0.2
-pytorch_lightning==2.2.2
-Requests==2.32.3
-scikit_learn==1.4.2
-scipy==1.10.1
-seaborn==0.13.2
-torch==2.1.0
-torch_ema==0.3
-torchvision==0.16.0
-transformers==4.47.1
-wandb==0.16.6
+einops
+hydra-core
+lightning
+lion_pytorch
+matplotlib
+numpy
+omegaconf
+pandas
+pytorch_lightning
+Requests
+scikit_learn
+scipy
+seaborn
+torch
+torch_ema
+torchvision
+transformers
+wandb
 
