Refactor data processing and model training scripts
- Updated requirements to include new dependencies for ONNX and KaggleHub.
- Modified run.py to streamline dataset handling and checkpoint management.
- Enhanced training logic to support new BTC dataset and improved logging.
- Removed unused functions and files related to visualizations and data sampling.
- Added new labeling function for orderbook data to improve prediction accuracy.
- Cleaned up code for better readability and maintainability.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
             "console": "integratedTerminal",
             "args": [
                 "+model=mlplob",
+                "+dataset=btc",
                 "hydra.job.chdir=False",
                 "hydra.run.dir=.",
             ]
