Add macOS compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
---extra-index-url https://download.pytorch.org/whl/cu121
-
 einops
 hydra-core
 lightning
@@ -13,10 +11,10 @@ Requests
 scikit_learn
 scipy
 seaborn
-torch==2.5.0+cu121
+torch==2.5.0
 torch_ema
 transformers
 wandb
 kagglehub
 onnx
-onnxruntime-gpu
+onnxruntime
