--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,6 @@ outputs
 .hydra
 __pycache__
 lightning_logs
-data/d*
-data/I*
-data/T*
-data/FI_2010/*.txt
-data/BTC
 env
 preprocessing/digital*
-data/checkpoints/TLOB/v*
+data
